@@ -2338,6 +2338,27 @@ Content-Description: OpenPGP Digital Signature
   (setq epa-last-coding-system-specified (mime-edit-text-coding))
   (epa-sign-region start end signers mode))
 
+(defun mime-edit-encrypt-pgp-nonmime (start end recipients sign signers)
+  "Encrypt the current region between START and END for RECIPIENTS.  Appropriate coding system is selected automatically.  When called interactively, current mime part is encrypted.
+When SIGN is non-nil, also sign by SIGNERS keys selected."
+  (interactive
+   (progn
+     (require 'epa)
+     (let ((mime-edit-pgp-verbose
+	    (or current-prefix-arg mime-edit-pgp-verbose))
+	   (context (epg-make-context epa-protocol)))
+       (list (mime-edit-content-beginning)
+	     (mime-edit-content-end)
+	     (epa-select-keys context
+			      "Select recipients for encryption.
+If no one is selected, symmetric encryption will be performed.  ")
+	     (setq sign (if mime-edit-pgp-verbose (y-or-n-p "Sign? ")))
+	     (if sign
+		 (epa-select-keys context
+				  "Select keys for signing.  "))))))
+  (setq epa-last-coding-system-specified (mime-edit-text-coding))
+  (epa-encrypt-region start end recipients sign signers))
+
 (defvar mime-edit-encrypt-recipient-fields-list '("From" "To" "cc"))
 
 (defun mime-edit-make-encrypt-recipient-header ()
